--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel = "stylesheet" href = "bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <!-- custom css -->
     <link rel = "stylesheet" href = "css/main.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <!-- Descripción -->
+    <meta name="description" content="Gianino Home es una web de moda.">
 </head>
 <body>
     
